// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET_CHAT_ERROR createChat Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_CHAT_ERROR",
  },
]
`;

exports[`GET_CHAT_ERROR getChat Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_CHAT_ERROR",
  },
]
`;

exports[`GET_CHAT_MESSAGES_COUNT_ERROR getChatMessagesCountByChatId Receives error 1`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_CHAT_MESSAGES_COUNT_ERROR",
  },
]
`;

exports[`GET_CHAT_MESSAGES_COUNT_SUCCESS getChatMessagesCountByChatId Receives count 2`] = `
Array [
  Object {
    "count": 10,
    "type": "GET_CHAT_MESSAGES_COUNT_SUCCESS",
  },
]
`;

exports[`GET_CHAT_MESSAGES_ERROR getChatMessagesByChatId Receives error 1`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_CHAT_MESSAGES_ERROR",
  },
]
`;

exports[`GET_CHAT_MESSAGES_SUCCESS getChatMessagesByChatId Receives messages 2`] = `
Array [
  Object {
    "messages": Array [],
    "type": "GET_CHAT_MESSAGES_SUCCESS",
  },
]
`;

exports[`GET_CHAT_SUCCESS createChat Empty params 1`] = `Array []`;

exports[`GET_CHAT_SUCCESS createChat Receives a chat 2`] = `
Array [
  Object {
    "chat": Object {
      "created_at": "2020-12-08T21:51:33.659Z",
      "deleted_at": null,
      "ended_at": null,
      "host_id": 2,
      "id": 1,
      "lobby_id": 1,
      "updated_at": null,
    },
    "type": "GET_CHAT_SUCCESS",
  },
]
`;

exports[`GET_CHAT_SUCCESS getChat Receives a chat 2`] = `
Array [
  Object {
    "chat": Object {
      "created_at": "2020-12-08T21:51:33.659Z",
      "deleted_at": null,
      "ended_at": null,
      "host_id": 2,
      "id": 1,
      "lobby_id": 1,
      "updated_at": null,
    },
    "type": "GET_CHAT_SUCCESS",
  },
]
`;

exports[`GET_CHAT_USERS_ERROR getChatUsersByChatId Receives error 1`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_CHAT_USERS_ERROR",
  },
]
`;

exports[`GET_CHAT_USERS_SUCCESS getChatUsersByChatId Receives users 2`] = `
Array [
  Object {
    "type": "GET_CHAT_USERS_SUCCESS",
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_muted": false,
        "is_present": true,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "single_use_password": false,
        "updated_at": "2020-12-10T22:29:11.638Z",
        "username": "super",
      },
      Object {
        "email": null,
        "id": 4,
        "is_anonymous": true,
        "is_muted": false,
        "is_present": true,
        "is_super": false,
        "personalname": null,
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "single_use_password": false,
        "updated_at": "2020-12-10T17:50:19.074Z",
        "username": "credible-lyrebird",
      },
    ],
  },
]
`;

exports[`GET_CHATS_ERROR getChats Receives error 1`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_CHATS_ERROR",
  },
]
`;

exports[`GET_CHATS_SUCCESS getChats Receives chats 2`] = `
Array [
  Object {
    "chats": Array [
      Object {
        "created_at": "2020-12-08T21:51:33.659Z",
        "deleted_at": null,
        "ended_at": null,
        "host_id": 2,
        "id": 1,
        "lobby_id": 1,
        "updated_at": null,
      },
    ],
    "type": "GET_CHATS_SUCCESS",
  },
]
`;

exports[`GET_CHATS_SUCCESS getChats Receives undefined 3`] = `
Array [
  Object {
    "chats": Array [],
    "type": "GET_CHATS_SUCCESS",
  },
]
`;

exports[`LINK_CHAT_TO_RUN_ERROR linkChatToRun Receives error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "LINK_CHAT_TO_RUN_ERROR",
  },
]
`;

exports[`LINK_CHAT_TO_RUN_SUCCESS linkChatToRun Receives chats for scenario 3`] = `
Array [
  Object {
    "chat": undefined,
    "type": "LINK_CHAT_TO_RUN_SUCCESS",
  },
]
`;

exports[`SET_CHAT_ERROR setChat Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "SET_CHAT_ERROR",
  },
]
`;

exports[`SET_CHAT_MESSAGE_ERROR setMessageById Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "SET_CHAT_MESSAGE_ERROR",
  },
]
`;

exports[`SET_CHAT_MESSAGE_SUCCESS setMessageById Empty params 1`] = `Array []`;

exports[`SET_CHAT_MESSAGE_SUCCESS setMessageById deleted_at 2`] = `
Array [
  Object {
    "message": Object {
      "deleted_at": "2021-01-19T18:45:01.366Z",
    },
    "type": "SET_CHAT_MESSAGE_SUCCESS",
  },
]
`;

exports[`SET_CHAT_SUCCESS setChat Empty params 1`] = `Array []`;

exports[`SET_CHAT_SUCCESS setChat Receives a chat 2`] = `
Array [
  Object {
    "chat": Object {
      "created_at": "2020-12-08T21:51:33.659Z",
      "deleted_at": null,
      "ended_at": null,
      "host_id": 2,
      "id": 1,
      "lobby_id": 1,
      "updated_at": null,
    },
    "type": "SET_CHAT_SUCCESS",
  },
]
`;

exports[`SET_CHAT_USERS_SUCCESS setChatUsersByChatId Receives users 1`] = `
Array [
  Object {
    "type": "SET_CHAT_USERS_SUCCESS",
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_muted": false,
        "is_present": true,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "single_use_password": false,
        "updated_at": "2020-12-10T22:29:11.638Z",
        "username": "super",
      },
      Object {
        "email": null,
        "id": 4,
        "is_anonymous": true,
        "is_muted": false,
        "is_present": true,
        "is_super": false,
        "personalname": null,
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "single_use_password": false,
        "updated_at": "2020-12-10T17:50:19.074Z",
        "username": "credible-lyrebird",
      },
    ],
  },
]
`;

exports[`SET_CHAT_USERS_SUCCESS setChatUsersByChatId with a duplicate Receives users 2`] = `
Array [
  Object {
    "type": "SET_CHAT_USERS_SUCCESS",
    "users": Array [
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_muted": false,
        "is_present": true,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "single_use_password": false,
        "updated_at": "2020-12-10T22:29:11.638Z",
        "username": "super",
      },
      Object {
        "email": null,
        "id": 4,
        "is_anonymous": true,
        "is_muted": false,
        "is_present": true,
        "is_super": false,
        "personalname": null,
        "roles": Array [
          "participant",
          "facilitator",
        ],
        "single_use_password": false,
        "updated_at": "2020-12-10T17:50:19.074Z",
        "username": "credible-lyrebird",
      },
    ],
  },
]
`;
